--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MONGO_URL=mongodb+srv://sangyog2058:7pt0Yqoo0ypP3Qau@task-manager.scyasr4.mongodb.net/Ecommerce?retryWrites=true&w=majority
+MONGO_URL=
 PORT=3000
 jwtSecret=ldflaksdflakdfasfkasfdlasfdkaslkfhadogf
 expiresIn=1d
